--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,12 +22,7 @@ stages:
             publishJUnitResults: true
             testResultsFiles: '**/*'
             goals: 'package'
-        - task: CopyFiles@2
-          inputs:
-            SourceFolder: '$(System.DefaultWorkingDirectory)'
-            Contents: '**/*.jar'
-            TargetFolder: '$(Build.ArtifactStagingDirectory)'
-
+        
 
 
         - task: PublishBuildArtifacts@1
@@ -54,4 +49,4 @@ stages:
             azureSubscription: 'Visual Studio Enterprise (7c63f23d-06c9-42d2-9202-9fc56ec986fd)'
             appType: 'webAppLinux'
             WebAppName: 'ayush-java-webappserver'
-            packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.jar'
+            packageForLinux: '$(System.ArtifactsDirectory)/ayush-maven/*.jar'
