--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,6 @@ stages:
             azureSubscription: 'Visual Studio Enterprise (7c63f23d-06c9-42d2-9202-9fc56ec986fd)'
             appType: 'webAppLinux'
             WebAppName: 'ayush-java-webappserver'
-            packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.war'
+            packageForLinux: '$(System.DefaultWorkingDirectory)/target/*'
             RuntimeStack: 'TOMCAT|8.5-jre8'
             StartupCommand: 'java -jar $(System.DefaultWorkingDirectory)/**/webapp-runner.jar $(System.DefaultWorkingDirectory)/**/*.war' 
