--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ stages:
             azureSubscription: 'Visual Studio Enterprise (7c63f23d-06c9-42d2-9202-9fc56ec986fd)'
             appType: 'webAppLinux'
             WebAppName: 'ayush-java-webappserver'
-            packageForLinux: '$(System.DefaultWorkingDirectory)/target/*'
+            packageForLinux: '$(System.ArtifactsDirectory)/target/*'
             RuntimeStack: 'JAVA|8-jre8'
-            StartupCommand: 'java -jar $(System.DefaultWorkingDirectory)/**/webapp-runner.jar $(System.DefaultWorkingDirectory)/**/*.war'
+            StartupCommand: 'java -jar $(System.ArtifactsDirectory)/**/webapp-runner.jar $(System.ArtifactsDirectory)/**/*.war'
 
