--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ stages:
       pool:
         vmImage: 'ubuntu-latest'
       steps:
-      - task: Build maven code
+      - task: Maven@3
         inputs:
           mavenPomFile: 'pom.xml'
           mavenOptions: '-Xmx3072m'
