--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,11 +25,7 @@ stages:
         
 
 
-      - task: PublishBuildArtifacts@1
-        inputs:
-          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-          ArtifactName: 'ayush-maven'
-          publishLocation: 'Container'
+
     
   - stage: Deploy
     jobs:
@@ -37,21 +33,12 @@ stages:
       pool:
         vmImage: 'ubuntu-latest'
       steps:
-      - task: DownloadBuildArtifacts@0
-        inputs:
-          buildType: 'current'
-          downloadType: 'single'
-          artifactName: 'ayush-maven'
-          downloadPath: '$(System.ArtifactsDirectory)'
-        
-
       - task: AzureRmWebAppDeployment@4
         inputs:
           ConnectionType: 'AzureRM'
           azureSubscription: 'Visual Studio Enterprise (7c63f23d-06c9-42d2-9202-9fc56ec986fd)'
           appType: 'webAppLinux'
           WebAppName: 'ayush-java-webappserver'
-          packageForLinux: '$(System.ArtifactsDirectory)/target/*'
+          packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.war'
           RuntimeStack: 'JAVA|8-jre8'
-          StartupCommand: 'java -jar $(System.ArtifactsDirectory)/**/**/webapp-runner.jar $(System.ArtifactsDirectory)/**/*.war'
-
+          StartupCommand: '$(System.DefaultWorkingDirectory)/**/**/webapp-runner.jar'
