--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,19 @@ stages:
           publishJUnitResults: true
           testResultsFiles: '**/test-*.xml'
           goals: 'package'
+      - task: CopyFiles@2
+        displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
+        inputs:
+          SourceFolder: '$(system.defaultworkingdirectory)'
+          Contents: '**/*.war'
+          TargetFolder: '$(build.artifactstagingdirectory)'
+        condition: succeededOrFailed()
+
+      - task: PublishBuildArtifacts@1
+        displayName: 'Publish Artifact: ayush-maven'
+        inputs:
+          PathtoPublish: '$(build.artifactstagingdirectory)'
+        condition: succeededOrFailed()
         
 
 
