Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
         displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
         inputs:
           SourceFolder: '$(system.defaultworkingdirectory)'
-          Contents: '**/*.war'
+          Contents: '**/*'
           TargetFolder: '$(build.artifactstagingdirectory)'
         condition: succeededOrFailed()
 
