--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,6 @@ stages:
           azureSubscription: 'Visual Studio Enterprise (7c63f23d-06c9-42d2-9202-9fc56ec986fd)'
           appType: 'webAppLinux'
           WebAppName: 'ayush-java-webappserver'
-          packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.war'
+          packageForLinux: '$(build.artifactstagingdirectory)/**/*.war'
           RuntimeStack: 'JAVA|8-jre8'
-          StartupCommand: '$(Pipeline.Workspace)/**/**/webapp-runner.jar $(System.DefaultWorkingDirectory)/**/*.war'
+          StartupCommand: '$(build.artifactstagingdirectory)/**/**/webapp-runner.jar $(build.artifactstagingdirectory)/**/*.war'
