--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,13 +30,12 @@ stages:
           TargetFolder: '$(build.artifactstagingdirectory)'
         condition: succeededOrFailed()
 
-      - task: PublishBuildArtifacts@1
-        displayName: 'Publish Artifact: ayush-maven'
-        inputs:
-          PathtoPublish: '$(build.artifactstagingdirectory)'
-        condition: succeededOrFailed()
         
-
+      - task: PublishBuildArtifacts@1
+        inputs:
+          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          ArtifactName: 'ayush-maven'
+          publishLocation: 'Container'
 
 
     
